# astro-bot

./: Makefile  README.md  pyproject.toml
bot/: __main__.py  config.py
bot/handlers/: welcome.py
horoscoper/: __init__.py  __main__.py  config.py  endpoints.py  nlp.py  utils.py
notebooks/: 0_htmlParser.ipynb  0_translation.ipynb  1_preprocessing.ipynb  2_gpt_preprocessing.ipynb  4_gpt_test.ipynb
