[tool.poetry]
name = "horoscope-bot"
version = "0.1.0"
description = ""
authors = ["a.kazachinskiy <kazachinskiy.a@romir.ru>"]
readme = "README.md"
packages = [{include = "horoscope_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
aiogram = "^2.25.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "^2.0.1"
transformers = "^4.28.1"
openpyxl = "^3.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
