[tool.poetry]
name = "horoscope-bot"
version = "0.1.0"
description = ""
authors = ["a.kazachinskiy <kazachinskiy.a@romir.ru>"]
readme = "README.md"
packages = [{include = "horoscope_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
aiogram = "^2.25.1"
python-dotenv = "^1.0.0"
h5py = "^3.8.0"
scikit-learn = "^1.2.2"
datasets = "^2.12.0"
evaluate = "^0.4.0"
accelerate = "^0.18.0"
python-docx = "^0.8.11"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "^2.0.1"
transformers = "^4.28.1"
openpyxl = "^3.1.2"
torch = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
